--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -1,1 +1,34 @@
-<p>register works!</p>
+<div class="row justify-content-center" style="padding-top: 150px;">
+    <div class="col-8 align-self-center">
+      <div>
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input [(ngModel)]="user.email" placeholder="ingrese Email" type="email" class="form-control" id="email"/>
+        </div>
+        <div class="form-group">
+          <label for="pass">Password</label>
+          <input [(ngModel)]="user.pass" placeholder="ingrese clave" type="password" class="form-control" id="pass"/>
+        </div>
+        <div class="form-group">
+          <label for="pass">Nombre</label>
+          <input [(ngModel)]="user.pass" placeholder="ingrese clave" type="password" class="form-control" id="pass"/>
+        </div>
+        <div class="form-group">
+          <label for="pass">Apellido</label>
+          <input [(ngModel)]="user.pass" placeholder="ingrese clave" type="password" class="form-control" id="pass"/>
+        </div>
+        <div class="form-group">
+          <label for="Perfil">Perfil</label>
+          <select class="form-control" [(ngModel)]="this.user.userType" id="perfil" >
+            <option>Alumno</option>
+            <option>Profesor</option>
+          </select>
+        </div>
+   
+        
+        
+        <button class="btn btn-block btn-success" (click)="onRegister()">Registrarse</button>
+        <button class="btn btn-block btn-outline-success" (click)="login()">Conectarse</button>
+      </div>
+    </div>
+  </div>
