--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -10,18 +10,10 @@
           <input [(ngModel)]="user.pass" placeholder="ingrese clave" type="password" class="form-control" id="pass"/>
         </div>
         <div class="form-group">
-          <label for="pass">Nombre</label>
-          <input [(ngModel)]="user.pass" placeholder="ingrese clave" type="password" class="form-control" id="pass"/>
-        </div>
-        <div class="form-group">
-          <label for="pass">Apellido</label>
-          <input [(ngModel)]="user.pass" placeholder="ingrese clave" type="password" class="form-control" id="pass"/>
-        </div>
-        <div class="form-group">
           <label for="Perfil">Perfil</label>
           <select class="form-control" [(ngModel)]="this.user.userType" id="perfil" >
-            <option>Alumno</option>
-            <option>Profesor</option>
+            <option>alumno</option>
+            <option>profesor</option>
           </select>
         </div>
    
